@@ -1,7 +1,7 @@
 package com.wallet.wallet.Security;
 
-import com.wallet.wallet.domain.repository.IUserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.wallet.wallet.api.service.IUserService;
+import lombok.AllArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -9,18 +9,20 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
+@AllArgsConstructor
 public class AuthenticationService implements UserDetailsService {
 
-    @Autowired
-    IUserRepository userRepository;
+    private final IUserService service;
 
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        com.wallet.wallet.domain.model.User user = userRepository.findByEmail(email).get();
-        SimpleGrantedAuthority grantedAuthority = new SimpleGrantedAuthority(user.getRole().getName().name());
-        return new User(user.getEmail(), user.getPassword(), Collections.singletonList(grantedAuthority));
+        var user = service.getByEmail(email);
+
+        var grantedAuthority = new SimpleGrantedAuthority(user.getRole().name());
+
+        return new User(user.getEmail(), user.getPassword(), List.of(grantedAuthority));
     }
 }
